--- a/css/style.css
+++ b/css/style.css
@@ -812,6 +812,7 @@ table {
 }
 
 .key-statistics .table-header {
+  position: relative;
   background-color: var(--darker-blue);
   color: var(--white);
   font-weight: bold;
@@ -1382,6 +1383,9 @@ details:not([open]) .answer {
   border: 2px solid var(--blue-button);
   color: var(--blue-button);
 }
+.caption-container {
+  position: relative;
+}
 
 @media (max-width: 767px) {
   .hero {
@@ -1488,4 +1492,10 @@ details:not([open]) .answer {
   .form-group-terms{
     margin: 15px 0;
   }
+  
+  .key-statistics tfoot tr td, .key-statistics .table-header {
+    text-align: left;
+    padding-left: 16px;
+  }
+  
 }
